<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.florys_app.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_water"
        android:name="com.example.florys_app.ui.water.WaterFragment"
        android:label="@string/title_water"
        tools:layout="@layout/fragment_water" />

    <fragment
        android:id="@+id/nav_scan"
        android:label="Scan"
        tools:layout="@layout/fragment_placeholder">
        <action
            android:id="@+id/action_nav_scan_to_scan_activity"
            app:destination="@id/nav_scan" />
    </fragment>

    <fragment
        android:id="@+id/nav_chat"
        android:name="com.example.florys_app.ui.chat.ChatFragment"
        android:label="@string/title_chat"
        tools:layout="@layout/fragment_chat" />

    <fragment
        android:id="@+id/nav_more"
        android:name="com.example.florys_app.ui.dashboard.DashboardFragment"
        android:label="@string/title_more"
        tools:layout="@layout/fragment_dashboard" />







</navigation>