<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#090E05"
    tools:context=".ui.about.AboutActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <RelativeLayout
            android:id="@+id/about_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="130dp">

            <ImageView
                android:id="@+id/icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/logo"
                android:src="@drawable/ic_florys"
                android:layout_centerHorizontal="true"
                android:gravity="center"/>

            <TextView
                android:id="@+id/about_title"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="150dp"
                android:text="@string/florys"
                android:textAppearance="@style/title_1"
                android:lineSpacingExtra="7sp"
                android:gravity="center" />

            <TextView
                android:id="@+id/about_detail"
                android:layout_width="300dp"
                android:layout_height="200dp"
                android:layout_marginTop="200dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:text="@string/about_appli"
                android:textAppearance="@style/title_2"
                android:lineSpacingExtra="7sp"
                android:gravity="center_horizontal" />

        </RelativeLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
