<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#090E05"
    tools:context=".ui.profile.ProfileActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_marginTop="150dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- CardView for Profile Photo -->
        <androidx.cardview.widget.CardView
            android:id="@+id/cv_photo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:cardCornerRadius="150dp"
            app:cardElevation="4dp"
            android:layout_gravity="center">

            <!-- Profile Image -->
            <ImageView
                android:id="@+id/ivAvatar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/profile"
                android:scaleType="centerCrop" />

            <!-- Edit Button positioned on the right -->
            <ImageButton
                android:id="@+id/btnEdit"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/ic_circle_full_24"
                android:backgroundTint="@color/black"
                android:contentDescription="@string/edit_photo_profile"
                android:layout_gravity="end|right"
                android:layout_margin="12dp"
                app:srcCompat="@drawable/baseline_photo_camera_24"
                app:tint="@color/white" />
        </androidx.cardview.widget.CardView>

        <!-- Profile Name -->
        <TextView
            android:id="@+id/name_profile_tittle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_name"
            android:textAppearance="@style/title_1"
            android:textAlignment="center"
            android:layout_marginTop="16dp" />

        <TextView
            android:id="@+id/name_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_name"
            android:textAppearance="@style/title_1"
            android:textAlignment="center"
            android:textSize="15sp"
            android:layout_marginTop="16dp" />

        <!-- Profile Type -->
        <TextView
            android:id="@+id/email_profile_tittle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="User ID"
            android:textAlignment="center"
            android:textAppearance="@style/title_1"
            android:layout_marginTop="16dp" />

        <TextView
            android:id="@+id/email_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textAlignment="center"
            android:textAppearance="@style/title_1"
            android:textSize="15sp"
            android:layout_marginTop="16dp" />

        <!-- Profile Pass -->
        <TextView
            android:id="@+id/password_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textAlignment="center"
            android:textAppearance="@style/title_1"
            android:textSize="15sp"
            android:layout_marginTop="16dp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
